[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-exchange-umoney-bridge"
version = "0.1.0"
description = "Local sidecar bridge exposing UMoney balance/debit/credit for C++ Endstone Exchange"
requires-python = ">=3.11"

[project.entry-points."endstone"]
exchange_umoney_bridge = "endstone_exchange_umoney_bridge:UMoneyBridgePlugin"

[tool.hatch.build.targets.wheel]
packages = ["endstone_exchange_umoney_bridge"]

